--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -185,9 +185,12 @@
     "description": "Откройте для себя наш премиальный выбор экзотических и тропических фруктов, тщательно отобранных с лучших ферм мира. От классических тропических до редких сортов, мы приносим вам самые свежие и вкусные фрукты.",
     "sliderTitle": "Наши премиальные экзотические фрукты",
     "sliderDescription": "Откройте для себя удивительное разнообразие свежих экзотических фруктов, которые мы импортируем непосредственно из Колумбии",
+    "quote": "Качество, собранное с заботой, доставленное с страстью",
     "search": {
-      "placeholder": "Поиск фруктов...",
-      "label": "Поиск"
+      "placeholder": "Поиск фруктов по названию...",
+      "label": "Поиск",
+      "clearSearch": "Очистить поиск",
+      "resultsCount": "{count} результат{plural} найден{plural}"
     },
     "categories": {
       "all": "Все",
@@ -207,6 +210,10 @@
     "messages": {
       "noResults": "Продукты не найдены",
       "noResultsDescription": "Попробуйте изменить критерии поиска или фильтрации.",
+      "noResultsSearch": "Фрукты не найдены для \"{query}\"",
+      "noResultsSearchDescription": "Попробуйте поискать по другим ключевым словам или просмотрите наши категории выше.",
+      "noResultsCategory": "Продукты в этой категории не найдены",
+      "noResultsCategoryDescription": "Попробуйте выбрать другую категорию или поищите конкретные фрукты.",
       "outOfStock": "Нет в Наличии",
       "inStock": "В Наличии"
     }
@@ -327,6 +334,120 @@
       "recipes": "Рецепты"
     },
     "readMore": "Читать далее"
+  },
+  "productDetails": {
+    "mango": {
+      "name": "Папайя",
+      "category": "Тропические",
+      "ediblePart": "Мякоть",
+      "consumption": "Свежая, смузи, десерты",
+      "healthBenefits": ["Богата витамином C", "Высокое содержание клетчатки", "Антиоксиданты"]
+    },
+    "dragon-fruit": {
+      "name": "Драконий Фрукт",
+      "category": "Экзотические",
+      "ediblePart": "Мякоть с семенами",
+      "consumption": "Свежий, фруктовые салаты, смузи-боулы",
+      "healthBenefits": ["Низкокалорийный", "Богат железом", "Витамин C"]
+    },
+    "passion-fruit": {
+      "name": "Физалис",
+      "category": "Тропические",
+      "ediblePart": "Мякоть и семена",
+      "consumption": "Свежий, соки, украшение десертов",
+      "healthBenefits": ["Высокое содержание клетчатки", "Витамин A", "Калий"]
+    },
+    "rambutan": {
+      "name": "Маракуйя",
+      "category": "Экзотические",
+      "ediblePart": "Прозрачная мякоть",
+      "consumption": "Свежая, фруктовые салаты",
+      "healthBenefits": ["Витамин C", "Медь", "Марганец"]
+    },
+    "lychee": {
+      "name": "Мангустин",
+      "category": "Тропические",
+      "ediblePart": "Сладкая мякоть",
+      "consumption": "Свежий, коктейли, десерты",
+      "healthBenefits": ["Витамин C", "Медь", "Витамин B6"]
+    },
+    "star-fruit": {
+      "name": "Банан",
+      "category": "Тропические",
+      "ediblePart": "Весь фрукт",
+      "consumption": "Свежий, гарнир, салаты",
+      "healthBenefits": ["Низкокалорийный", "Витамин C", "Клетчатка"]
+    },
+    "papaya": {
+      "name": "Дыня Канталупа",
+      "category": "Тропические",
+      "ediblePart": "Оранжевая мякоть",
+      "consumption": "Свежая, смузи, салаты",
+      "healthBenefits": ["Пищеварительные ферменты", "Витамин C", "Фолат"]
+    },
+    "jackfruit": {
+      "name": "Фейхоа",
+      "category": "Экзотические",
+      "ediblePart": "Желтые стручки",
+      "consumption": "Свежая, карри, десерты",
+      "healthBenefits": ["Высокое содержание клетчатки", "Витамин A", "Калий"]
+    },
+    "durian": {
+      "name": "Сметанное Яблоко",
+      "category": "Экзотические",
+      "ediblePart": "Кремовая мякоть",
+      "consumption": "Свежее, десерты, мороженое",
+      "healthBenefits": ["Высокая энергетическая ценность", "Витамин B", "Калий"]
+    },
+    "kiwi": {
+      "name": "Лайм",
+      "category": "Тропические",
+      "ediblePart": "Зеленая мякоть с семенами",
+      "consumption": "Свежий, смузи, фруктовые салаты",
+      "healthBenefits": ["Витамин C", "Клетчатка", "Антиоксиданты"]
+    },
+    "guava": {
+      "name": "Авокадо",
+      "category": "Тропические",
+      "ediblePart": "Розовая/белая мякоть",
+      "consumption": "Свежий, соки, джемы",
+      "healthBenefits": ["Витамин C", "Клетчатка", "Фолат"]
+    },
+    "pomegranate": {
+      "name": "Зеленое Яблоко",
+      "category": "Косточковые Фрукты",
+      "ediblePart": "Красные семена (ариллы)",
+      "consumption": "Свежее, соки, салаты",
+      "healthBenefits": ["Антиоксиданты", "Витамин C", "Клетчатка"]
+    },
+    "persimmon": {
+      "name": "Куруба",
+      "category": "Косточковые Фрукты",
+      "ediblePart": "Оранжевая мякоть",
+      "consumption": "Свежая, сушеная, десерты",
+      "healthBenefits": ["Витамин A", "Клетчатка", "Марганец"]
+    },
+    "blueberries": {
+      "name": "Инжир Барбари",
+      "category": "Ягоды",
+      "ediblePart": "Вся ягода",
+      "consumption": "Свежие, смузи, выпечка",
+      "healthBenefits": ["Антиоксиданты", "Витамин K", "Клетчатка"]
+    },
+    "blackberries": {
+      "name": "Тамарилло",
+      "category": "Ягоды",
+      "ediblePart": "Вся ягода",
+      "consumption": "Свежие, джемы, десерты",
+      "healthBenefits": ["Витамин C", "Клетчатка", "Антиоксиданты"]
+    },
+    "blood-orange": {
+      "name": "Алоэ Вера",
+      "category": "Цитрусовые",
+      "ediblePart": "Красные сегменты мякоти",
+      "consumption": "Свежее, соки, коктейли",
+      "healthBenefits": ["Витамин C", "Антоцианы", "Фолат"]
+    }
   },
   "blogArticles": {
     "1": {
