hero section fix

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -57,7 +57,7 @@
     "language": "اللغة"
   },
   "hero": {
-    "title": "فواكه استوائية فاخرة",
+    "title": "Fruit Exotic International Inc",
     "subtitle": "من قلب كولومبيا إلى يديك — طازجة يمكنك الوثوق بها، جودة يمكنك تذوقها.",
     "cta": "استكشف فواكهنا"
   },
