--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -57,7 +57,7 @@
     "language": "Language"
   },
   "hero": {
-    "title": "Premium Exotic Fruits",
+    "title": "Fruit Exotic International Inc",
     "subtitle": "From the heart of Colombia to your hands — freshness you can trust, quality you can taste.",
     "cta": "Explore Our Fruits"
   },
