--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -57,7 +57,7 @@
     "language": "Idioma"
   },
   "hero": {
-    "title": "Frutas Exóticas Premium",
+    "title": "Fruit Exotic International Inc",
     "subtitle": "Del corazón de Colombia a tus manos — frescura en la que puedes confiar, calidad que puedes saborear.",
     "cta": "Explora Nuestras Frutas"
   },
