--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -57,7 +57,7 @@
     "language": "Langue"
   },
   "hero": {
-    "title": "Fruits Exotiques Premium",
+    "title": "Fruit Exotic International Inc",
     "subtitle": "Du cœur de la Colombie à vos mains — fraîcheur en laquelle vous pouvez avoir confiance, qualité que vous pouvez goûter.",
     "cta": "Explorez Nos Fruits"
   },
