--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -57,7 +57,7 @@
     "language": "Язык"
   },
   "hero": {
-    "title": "Премиальные экзотические фрукты",
+    "title": "Fruit Exotic International Inc",
     "subtitle": "Из сердца Колумбии в ваши руки — свежесть, которой вы можете доверять, качество, которое вы можете попробовать.",
     "cta": "Изучите наши фрукты"
   },
